Kubernetes/apps/prod/monitoring/config/service-cadvisor.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: kube-system
  labels:
    app.kubernetes.io/name: cadvisor
spec:
  selector:
    app.kubernetes.io/name: cadvisor
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
