Kubernetes/apps/prod/monitoring/config/destinationrule-observability.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: observability-plain-http
  namespace: monitoring
spec:
  host: grafana.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: loki-gateway-plain-http
  namespace: monitoring
spec:
  host: loki-gateway.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tempo-query-frontend-plain-http
  namespace: monitoring
spec:
  host: tempo-query-frontend.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mimir-nginx-plain-http
  namespace: monitoring
spec:
  host: mimir-nginx.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: prometheus-plain-http
  namespace: monitoring
spec:
  host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: alertmanager-plain-http
  namespace: monitoring
spec:
  host: kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: kiali-plain-http
  namespace: monitoring
spec:
  host: kiali.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
