Kubernetes/apps/prod/monitoring/config/serviceentry-vault.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: vault-vip
  namespace: monitoring
spec:
  hosts:
    - vault.platform.local
  addresses:
    - 10.10.10.180
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 8200
      protocol: HTTPS
  resolution: STATIC
  endpoints:
    - address: 10.10.10.180
